package at.htl.entity;

public class Usage {
    private String usage;
}
