@startuml

class Device{
- int: DeviceID
- String: Name
- Usage: Usage
}



enum Usage{

}

class Room{
- int: RoomNr
- int: Floor
- String: Name
}

Room "*"--"*" Device
(Room, Device) ..> Integration

Device <-r- Usage

note as Note
    Usage is A Lookup Table
    to get which Device it is
    for example
    "Chromecast" oder "Printer"
end note

Note -l- Usage
@enduml
